@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019
+ * Copyright (c) 2019-2020
  * IoTech Ltd
  *
  * SPDX-License-Identifier: Apache-2.0
@@ -15,5 +15,7 @@
 void edgex_transform_outgoing (devsdk_commandresult *cres, edgex_propertyvalue *props, devsdk_nvpairs *mappings);
 
 void edgex_transform_incoming (iot_data_t **cres, edgex_propertyvalue *props, devsdk_nvpairs *mappings);
+
+bool edgex_transform_validate (const iot_data_t *val, const edgex_propertyvalue *props);
 
 #endif
