@@ -2,6 +2,7 @@ This is the C SDK for EdgeX. Its API is based largely on the Go SDK.
 
 Changes for 1.3.0 "Hanoi":
 
+- 'minimum' and 'maximum' ValueProperties are effective.
 - PUT commands on api/v2/device can read CBOR payloads as an alternative to JSON
 - 'mask' valueproperty is passed as part of the command request. Drivers should
   atomically perform a read-modify-write operation if this is nonzero. (See README.v2.md)
